--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,28 @@
+# Site settings
 title: Charlie
 tagline: A simple, charming blog theme.
 description: >-
   Charlie is a simple, classic-looking, charming Jekyll theme for bloggers. It includes a sidebar navigation, social links and archive pages.
 
 logo: "/assets/images/logo.jpg"
-lang: pt-BR
+lang: en
 
-url: "http://localhost:4000"
-baseurl: ""
-
+# Theme settings
 theme: jekyll-theme-charlie
 
 charlie:
   hide_site_title: false
   hide_blog_content: false
+  hide_rss_icon: false
+  custom_rss_path: "/feed.xml"
   date_formats:
     day: "%b, %-d %Y"
     month: "%b, %Y"
     year: "%Y"
-  
-paginate: 5
-paginate_path: "/page/:num/"
 
-social:
-  name: Arthur
-  links:
-    - https://twitter.com/arthrfrts
-    - https://www.facebook.com/arthrfrts
-    
-jekyll-archives:
-  enabled: "all"
-  layout: archive
+# Build settings
+url: ""
+baseurl: ""
 
 plugins:
   - jekyll-feed
@@ -38,3 +30,18 @@ plugins:
   - jekyll-seo-tag
   - jekyll-paginate
   - jekyll-archives
+  
+# Plugin: jekyll-paginate
+paginate: 5
+paginate_path: "/page/:num/"
+  
+# Plugin: jekyll-seo-tag
+social:
+  name: Charlie
+  links:
+    - https://github.com/arthrfrts/jekyll-theme-charlie
+
+# Plugin: jekyll-archives      
+jekyll-archives:
+  enabled: "all"
+  layout: archive
