--- a/_data/translate/pt-BR.yaml
+++ b/_data/translate/pt-BR.yaml
@@ -11,3 +11,8 @@ newer_posts: "&larr; Posts mais recentes"
 archive_date_title: "Posts publicados em"
 archive_tag_title: "Posts com a tag"
 archive_category_title: "Posts arquivados em"
+
+page_not_found: "404"
+page_doest_exist: "A página que você está procurando não existe."
+search_can_help: "Você pode tentar encontrar ela usando a busca:"
+search: "Buscar"
